Update automation template for upgrade from jdk 11 to 17