@@ -29,6 +29,7 @@ PROTOCOL="http"  # Change to "https" if Ambari Server is configured with SSL
 # Template directory
 TEMPLATE_DIR="./ODP-env-templates"
 MIGRATION_PATH=""  # Will be set based on source JDK version
+JAVA_VERSION=""
 
 #---------------------------------------------------------
 # Ambari SSL Certificate Handling (if HTTPS enabled)
@@ -83,10 +84,12 @@ detect_source_jdk() {
         8)
             MIGRATION_PATH="$TEMPLATE_DIR/jdk8-to-jdk17"
             echo -e "${GREEN}Migration path set: JDK 8 → JDK 17${NC}"
+            JAVA_VERSION="$source_jdk"
             ;;
         11)
             MIGRATION_PATH="$TEMPLATE_DIR/jdk11-to-jdk17"
             echo -e "${GREEN}Migration path set: JDK 11 → JDK 17${NC}"
+            JAVA_VERSION="$source_jdk"
             ;;
         *)
             echo -e "${RED}Invalid selection. Exiting.${NC}"
@@ -119,45 +122,112 @@ set_config() {
 }
 
 #---------------------------------------------------------
+# Service-Specific JVM options
+#---------------------------------------------------------
+
+JVM_FLAGS_HDFS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
+JVM_FLAGS_YARN="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED"
+JVM_FLAGS_TEZ="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
+JVM_FLAGS_HIVE="--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.regex=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.provider=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED"
+JVM_FLAGS_OOZIE="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
+JVM_FLAGS_KMS="--add-exports java.xml.crypto/com.sun.org.apache.xml.internal.security.utils=ALL-UNNAMED"
+
+#---------------------------------------------------------
 # Service-Specific Configuration Update Functions
 #---------------------------------------------------------
 
 update_hdfs_configuration_for_jdk17() {
     echo -e "${YELLOW}Starting to update configurations for HDFS, YARN, and MapReduce...${NC}"
+
+    set_config "hdfs-site" "jvm_flags" "${JVM_FLAGS_HDFS}"
     set_config "hadoop-env" "content" "$(cat $MIGRATION_PATH/HDFS-env-template)"
-    set_config "yarn-env" "content" "$(cat $MIGRATION_PATH/Yarn-env-template)"
+
+    set_config "yarn-site" "jvm_flags" "${JVM_FLAGS_YARN}"
     set_config "mapred-env" "content" "$(cat $MIGRATION_PATH/Mpreduce-env-template)"
     set_config "mapred-site" "yarn.app.mapreduce.am.admin-command-opts" "$(cat $MIGRATION_PATH/Mpreduce-site-template)"
+    set_config "yarn-env" "content" "$(cat $MIGRATION_PATH/Yarn-env-template)"
+
+    if [ "$JAVA_VERSION" -eq "8" ]; then
+      set_config "yarn-hbase-env" "content" "$(cat $MIGRATION_PATH/Yarn-hbase-env-template)"
+      set_config "node-manager" "yarn.nodemanager.aux-services" "$(cat $MIGRATION_PATH/Yarn-nodemanager-aux-services)"
+      # Remove configs
+    fi
+
     echo -e "${GREEN}Successfully updated configurations for HDFS, YARN, and MapReduce.${NC}"
 }
 
 update_infra_configuration_for_jdk17() {
     echo -e "${YELLOW}Starting to update configurations for Infra-Solr...${NC}"
-    set_config "infra-solr-env" "content" "$(cat $MIGRATION_PATH/Infra-solr-env-template)"
+
     set_config "infra-solr-env" "infra_solr_gc_log_opts" "$(cat $MIGRATION_PATH/Infra-solr-gc-log-opts)"
     set_config "infra-solr-env" "infra_solr_gc_tune" "$(cat $MIGRATION_PATH/Infra-solr-gc-tune)"
+
+    if [ "$JAVA_VERSION" -eq "8" ]; then
+      set_config "infra-solr-env" "content" "$(cat $MIGRATION_PATH/Infra-solr-env-template)"
+    fi
+
     echo -e "${GREEN}Successfully updated configurations for Infra-Solr.${NC}"
 }
 
 update_hive_configuration_for_jdk17() {
     echo -e "${YELLOW}Starting to update configurations for Tez and Hive...${NC}"
+
+    set_config "tez-site" "jvm_flags" "${JVM_FLAGS_TEZ}"
     set_config "tez-env" "content" "$(cat $MIGRATION_PATH/Tez-env-template)"
     set_config "tez-site" "tez.am.launch.cluster-default.cmd-opts" "$(cat $MIGRATION_PATH/Tez-site-template)"
     set_config "tez-site" "tez.task.launch.cluster-default.cmd-opts" "$(cat $MIGRATION_PATH/Tez-site-template)"
+
+    set_config "hive-site" "jvm_flags" "${JVM_FLAGS_HIVE}"
     set_config "hive-env" "content" "$(cat $MIGRATION_PATH/Hive-env-template)"
+
+    if [ "$JAVA_VERSION" -eq "8" ]; then
+      set_config "general" "hive.tez.java.opts" "$(cat $MIGRATION_PATH/Hive-tez-java-opts)"
+      # Remove configs
+    fi
+
     echo -e "${GREEN}Successfully updated configurations for Tez and Hive.${NC}"
+}
+
+update_hbase_configuration_for_jdk17() {
+    echo -e "${YELLOW}Starting to update configurations for HBase...${NC}"
+
+    if [ "$JAVA_VERSION" -eq "8" ]; then
+      set_config "hbase-env" "content" "$(cat $MIGRATION_PATH/HBase-env-template)"
+    fi
+
+    echo -e "${GREEN}Successfully updated configurations for HBase.${NC}"
 }
 
 update_oozie_configuration_for_jdk17() {
     echo -e "${YELLOW}Starting to update configurations for Oozie...${NC}"
+
+    set_config "oozie-site" "jvm_flags" "${JVM_FLAGS_OOZIE}"
     set_config "oozie-env" "content" "$(cat $MIGRATION_PATH/Oozie-env-template)"
+
     echo -e "${GREEN}Successfully updated configurations for Oozie.${NC}"
 }
 
 update_kms_configuration_for_jdk17() {
     echo -e "${YELLOW}Starting to update configurations for Ranger KMS...${NC}"
+
+    set_config "kms-site" "jvm_flags" "${JVM_FLAGS_KMS}"
     set_config "kms-env" "content" "$(cat $MIGRATION_PATH/Kms-env-template)"
+
     echo -e "${GREEN}Successfully updated configurations for Ranger KMS.${NC}"
+}
+
+update_druid_configuration_for_jdk17() {
+    echo -e "${YELLOW}Starting to update configurations for Ranger Druid...${NC}"
+    if [ "$JAVA_VERSION" -eq "8" ]; then
+      set_config "druid-env" "content" "$(cat $MIGRATION_PATH/Druid-env-template)"
+      set_config "druid-env" "druid.broker.jvm.opts" "$(cat $MIGRATION_PATH/Druid-env-opts)"
+      set_config "druid-env" "druid.coordinator.jvm.opt" "$(cat $MIGRATION_PATH/Druid-env-opts)"
+      set_config "druid-env" "druid.historical.jvm.opt" "$(cat $MIGRATION_PATH/Druid-env-opts)"
+      set_config "druid-env" "druid.middlemanager.jvm.opts" "$(cat $MIGRATION_PATH/Druid-env-opts)"
+      set_config "druid-env" "druid.overlord.jvm.opts" "$(cat $MIGRATION_PATH/Druid-env-opts)"
+      set_config "druid-env" "druid.router.jvm.opts" "$(cat $MIGRATION_PATH/Druid-env-opts)"
+    fi
+    echo -e "${GREEN}Successfully updated configurations for Ranger Druid.${NC}"
 }
 
 #---------------------------------------------------------
